--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,12 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
-        dockerfile: ['8.1-apache', '8.3-apache', '8.3-apache-node']
+        dockerfile: ['8.1-apache', '8.1-apache-node', '8.3-apache', '8.3-apache-node']
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,3 +28,5 @@ jobs:
           file: ${{ matrix.dockerfile }}.dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ matrix.dockerfile }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
