--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,5 +30,5 @@ jobs:
           file: ${{ matrix.dockerfile }}.dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ matrix.dockerfile }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=build-${{ matrix.dockerfile }}
+          cache-to: type=gha,scope=build-${{ matrix.dockerfile }},mode=max
